jsonschemadsl2ecore.trafo.opt/test/test91/invalidtests/example5.test91
{
	"baz":"Error",
	"quax":"Warn",
	"bazzz":{
		"foo":"Warn"
	},
	"foossss":"Bad"
}